Add classnames package and update .gitignore

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "serve": "vite preview",
     "test": "jest",
     "format": "prettier --write ."
-
   },
   "dependencies": {
     "autoprefixer": "^10.4.16",
+    "classnames": "^2.5.1",
     "debug": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
