--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.5.1",
+    "@fortawesome/free-regular-svg-icons": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "autoprefixer": "^10.4.16",
     "classnames": "^2.5.1",
     "debug": "^4.3.1",
+    "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.2",
+    "react-scroll-trigger": "^0.6.14",
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
