--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^10.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.5.3",
     "react-router-dom": "^6.21.2",
     "react-scroll-trigger": "^0.6.14",
