--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@vercel/postgres": "^0.5.1",
     "autoprefixer": "^10.4.16",
     "classnames": "^2.5.1",
+    "cors": "^2.8.5",
     "debug": "^4.3.1",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "framer-motion": "^10.18.0",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
