--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^10.18.0",
     "pg": "^8.11.3",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.7",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.5.3",
